--- a/activity.html
+++ b/activity.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="activity.css">
-
+  <meta charset="UTF-8">
 </head>
 <body>
 <header>
   <nav>
-    <ul>
-      <li><a href="personal.html">My Personal Website</a></li>
-      <li><a href="homepage.html" >Home</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="activity.html">Activities</a></li>
-      <li><a href="startingwithhtml.html">Contact</a></li>
+    <ul style="resize: horizontal">
+      <!--      <li><a href="personal.html">My Personal Website</a></li>-->
+      <li><a href="homepage.html" >Home 🏠</a></li>
+      <li><a href="personal.html">About Me :)</a></li>
+      <li><a href="resume.html">Resume 😂</a></li>
+      <li><a href="activity.html">Activities 🎖️</a></li>
+<!--      <li><a href="overview.html"> Overview 👀</a></li>-->
+      <li><a href="startingwithhtml.html">Contact 📮</a></li>
     </ul>
   </nav>
 </header>
@@ -21,30 +23,61 @@
     <marquee> Lets Move this text.</marquee>
     <marquee direction="right"
              behavior="alternate"
-             style="border:#ffffff 0px SOLID; color: #ffffff; position: absolute; left: 00%; bottom: 80%; background-color: rgba(51,43,0,0.82); font-style: italic;">
-      <h1>Experientail Artifacts</h1>
+             style="border:#ffffff 0px SOLID; color: #ffffff; position: absolute; left: 00%; bottom: 80%; background-color: rgb(65,73,227); font-style: italic;">
+      <h1>Experiential Artifacts</h1>
     </marquee>
   </div>
-  <div class = "vertical"></div>
+  <div class = "vertical">  </div>
   <div class = "horizontal">
     <img class=image1 src="project1.JPG" width="300" height="300">
-  </div>
-  <div>
-    <p style="color: #dddddd; position: absolute; bottom: 30%; left: 10%; padding: 20px"> During the break, I created an Arduino Water Irrigation system that can be used in daily routines. It is used to automate the process of watering plants. This system uses sensors to detect the moisture level of soil and controls the flow of water accordingly, which helps to conserve water and keep the plants healthy at the same time. The system can be customized as per the requirements, such as the amount of water and moisture level of each part.</p>
-    <p style="color: #dddddd; position: absolute; bottom: 20%; left: 10%; padding: 20px"> Other than maintaining the water level, the Arduino water irrigation system can also use other sensors, such as temperature and humidity. Thus, it can adjust watering schedules based on weather conditions. This can be mainly used for farmers who can save time and effort for those who manage multiple farms. In short, the Arduino water irrigation system is a cost-effective and efficient solution for automating the process of watering plants.</p>
-  </div>
-  <div class = "horizontal2">
-    <img class=image2 src="project1.JPG" width="300" height="300">
-  </div>
-  <div>
-    <p style="color: #dddddd; position: absolute; bottom: -33%; left: 10%; padding: 20px">As first-year computer science freshmen, we were given a task to develop a project using simple syntax and with very limited boundaries as a code limit. The main goal was to develop something that could be useful for college freshmen, something they might need during their first year. We focused on many ideas, but we observed that we were unable to present them well in front of the audience, or as expected. So, we decided to develop something that could give fellow students some practice based on their career and job options. We collected a bunch of well-known jobs applied by college students and prepared some general questions and answers given by experts. Then, we broke down the answers into a string of specific words that either showed confidence or power in the applicant. As per user input, it gives suggestions and points that can guide the student to get a chance for practice and boost their confidence level. </p>
+    <div style="resize: block;">
+      <p style="color: #dddddd;"> Creating the Arduino Water Irrigation system was a fun and rewarding project that allowed me to combine my passion for technology with my love for gardening. To get started, I first gathered all the necessary components, including the Arduino board, moisture sensors, a water pump, and tubing.
+
+        Next, I programmed the Arduino board to read the moisture levels of the soil using the moisture sensors and control the flow of water to the plants accordingly. I also added the option to customize the system based on specific plant needs, such as adjusting the water flow and moisture levels.
+
+        After assembling all the components and testing the system, I was thrilled to see the system in action! The moisture sensors detected the soil moisture levels, and the water pump kicked in to provide the right amount of water, ensuring that each plant was receiving the perfect amount of hydration.
+
+        Additionally, I also integrated temperature and humidity sensors, allowing the system to adjust the watering schedules based on weather conditions. This feature proved to be especially useful during hot and dry weather, as it prevented the plants from getting dehydrated.
+        Overall, creating the Arduino Water Irrigation system was a fun and challenging project that allowed me to combine my love for technology with my passion for gardening. And, it's been satisfying to see how the system has helped me maintain healthy plants while conserving water at the same time.</p>
+    </div>
   </div>
 
-  <div class = "horizontal3">
-    <img class=image3 src="project3.png" width="300" height="300">
+  <div class = "horizontal2">
+    <img class=image2 src="project_2.jpg" width="300" height="300">
+    <div>
+      <p style="color: #dddddd;">As first-year computer science freshmen, we were assigned a task to create a project using simple syntax and within strict code limits. The primary objective was to build something that could prove beneficial for fellow college freshmen, something they might need during their initial year. We explored various ideas, but faced difficulties while presenting them to the audience, as we had anticipated. Consequently, we decided to develop something that could provide practice to fellow students based on their career and job options. We compiled a list of popular jobs that college students usually apply for and created general questions and answers provided by experts. Next, we dissected the answers into specific words that exuded confidence and authority in the candidate. Upon receiving user input, the program offers suggestions and tips that can guide the student to gain experience and enhance their confidence level.</p>
+    </div>
   </div>
-  <div>
-    <p style="color: #dddddd; position: absolute; bottom: -70%; left: 10%; padding: 20px">I got this chance to develop my personal website. And from the first day I started to code with some basic index of html and later as the time continued i started exploreing new feature of html with css and from where my website started looking something more than just a skeleton. Now it got some texture and design. And during the send phrase I am still using the same conspect but with time I am getting better on it. I am glad that I got a chance to dive into this pool of website coding. I am loving it and I also decided to continues this during summer break and learn some more complex things about the website development. And develop something which we daily get in front of.  </p</div>
+
+
+  <div class = "horizontal3">
+    <img class=image3 src="project3.PNG" width=100% height=auto>
+    <div>
+      <p style="color: #dddddd;">I got the opportunity to develop my personal website, and from the first day, I started coding with some basic HTML index. As time passed, I began exploring new features of HTML and CSS, and that's when my website began to look like something more than just a skeleton. Now, it has some texture and design, and I have added some interactive elements to make it more engaging for my visitors.
+
+        During the second phase, I am still using the same concept, but with time, I am improving my coding skills. I am now able to write cleaner and more efficient code, and I have learned some new techniques to make my website load faster and perform better.
+
+        I am glad that I got the chance to dive into the pool of website coding. It has been a fascinating journey so far, and I have learned a lot about web development. I love it, and I have decided to continue this during the summer break and learn more complex things about website development. I want to develop something that we encounter daily, something that can make a difference in people's lives. I am excited to see where this journey will take me, and I am ready to face any challenges that come my way.</p></div>
+  </div>
+
+
+  <div class = "horizontal4">
+
+    <img class=image4 src="project_4.PNG" width=100% height=auto>
+
+    <div>
+      <p style="color: #dddddd;">This is the project I am working on. For the capstone project, we were divided into multiple teams, and each team was assigned clients from the campus to resolve their daily challenges. Our team was assigned Joe Velasquez, who is an IT Coordinator on our campus. We got to know about their ongoing problem with ticket management. As he asked for certain requirements, we as a group decided to understand and implement every requirement. We decided to develop something that is easy to understand for the user, and the user does not need to know anything about the backend. Therefore, we came up with an idea to develop a GUI.
+
+        This was my first big coding project, and I decided to take it to the next level. I came up with the idea to integrate our GUI with SQL Server so that our software could support multiple users at the same time. It was a lot for us to implement in terms of code, especially in C++, but we found a way to do it. We created a login page that checks the user's information, then provides options to search for tickets, add tickets, and finally, display all tickets on the server.
+
+        We are looking forward to making changes to our graphic design to make the GUI page look more interactive. We want to create a user-friendly interface so that users can easily navigate and use the software. We hope that our project will be successful and will help Joe Velasquez to solve their ticket management problem. </p></div>
+
+  </div>
+
+
+
 </main>
 </body>
+
+
 </html>
